# codescribe

./: .commitmsg  .env.debug.example  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .semgrep.yaml  AGENTS.md  BUNDLED_MODE.md  BUNDLING_GUIDE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEV_QUICK_START.md  LICENSE  Makefile  NOTICE  README.md  README_PL.md  ROADMAP.md  SECURITY.md  VistaScribe  VistaScribe-dev  andrzej_braille.md  audio.py  backend.py  build.rs  config.py  first_run.py  hotkeys.py  layout_patch.rs  llm.py  lm_server.py  loct-for-ai.json  main.py  marbles_truth_plan.md  path_utils.py  pico.save  pyproject.toml  (+5 more)
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.run/: VistaScribe-dev_build_dmg.run.xml  VistaScribe-dev_fresh_yes.run.xml  VistaScribe-dev_start_both.run.xml  VistaScribe_fresh_yes.run.xml  VistaScribe_logs_follow.run.xml  VistaScribe_start_both.run.xml
app/: agent_delivery.rs  lib.rs  logging.rs  project.yml  qube_lifecycle.rs  test_env.rs  transcription_overlay.rs  ui_helpers.rs  voice_chat_ui.rs
assets/: operator_vocabulary.jsonl  programming.jsonl  protected_terms.jsonl  seed.jsonl  veterinary.jsonl
bridge/: .gitignore  Cargo.toml  uniffi-bindgen.rs
bridge/smoke/: main.swift
bridge/src/: agent.rs  agent_delivery.rs  agent_status.rs  config.rs  hotkeys.rs  lib.rs  mcp_admin.rs  notes.rs  quality.rs  recording.rs  threads.rs  tray_status.rs
bundle/: entitlements.plist
codescribe-core/: Cargo.toml
codescribe-rs/: .gitignore  CONTROLLER_INTEGRATION_STATUS.md  Cargo.toml  CodeScribe  Makefile
codescribe-rs/examples/: record_streaming.rs  record_test.rs
codescribe-rs/src/: ai_formatting.rs  audio.rs  backend.rs  client.rs  controller.rs  history.rs  hotkeys.rs  launchd.rs  lib.rs  main.rs  sound.rs  tray.rs  ui.rs
codescribe-rs/src/config/: defaults.rs  global.rs  loader.rs  mod.rs  types.rs
codescribe-tools/: runner.sh
codescribe_core/: Cargo.toml
core/: Cargo.toml  attachment.rs  build.rs  hf_cache.rs  lib.rs  memory.rs  transcript_tagging.rs
core/agent/: assets.rs  event.rs  mod.rs  provider.rs  registry.rs  session.rs  thread_delivery.rs  thread_export.rs  thread_index.rs  thread_store.rs  tool_output.rs  types.rs
core/audio/: archive.rs  chunker.rs  loader.rs  mod.rs  recorder.rs  streaming_recorder.rs
core/config/: default_env.txt  defaults.rs  keychain.rs  loader.rs  migrate.rs  mod.rs  models.rs  prompts.rs  settings.rs  types.rs
core/connectors/: github.rs  mod.rs  web.rs
core/conversation/: config.rs  context.rs  engine.rs  mod.rs  turns.rs
core/demux/: mod.rs  parser.rs
core/embedded/: mod.rs
core/embedder/: embedded.rs  engine.rs  mod.rs  singleton.rs
core/ipc/: client.rs  mod.rs  types.rs
core/llm/: ai_formatting.rs  client.rs  key_liveness.rs  lane_truth.rs  mod.rs  model_discovery.rs  provider.rs  responses_streaming_manager.rs  voice_chat.rs
core/llm/account_auth/: device_code.rs  mod.rs  pkce.rs  server.rs
core/mcp/: client.rs  config_store.rs  mod.rs
core/pipeline/: contracts.rs  dedup.rs  mod.rs  sinks.rs  stream_postprocess.rs  streaming.rs  tests.rs
core/pipeline/streaming/: correction.rs  emitter.rs  mod.rs  offline.rs  pipeline.rs  quality_gate.rs  session.rs  stream_log.rs  tests.rs  tuning.rs
core/pipeline/tests/: regressions.rs
core/prompts/: formatting-max.txt  formatting-smart.txt  formatting.txt
core/quality/: mod.rs  overlay_quality.rs  quality_loop.rs  quality_report.rs  qube_daemon.rs  qube_report.rs
core/qube/: server.rs
core/state/: history.rs  mod.rs  notes.rs
core/stt/: adapter.rs  mod.rs  onnx_adapter.rs  scheduler.rs
core/stt/apple_stt/: README.md  codescribe-stt-bridge.swift  mod.rs
core/stt/tail_patcher/: mod.rs
core/stt/whisper/: embedded.rs  engine.rs  mod.rs  params.rs  silero_filter.rs  singleton.rs  timestamps.rs
core/tests/: env_validation.rs  formatting_policy_runtime.rs
core/tts/: audio_output.rs  embedded.rs  engine.rs  mod.rs  singleton.rs
core/util/: mod.rs  safe_path.rs  status.rs
core/vad/: config.rs  discriminator.rs  embedded.rs  install.rs  mod.rs  silero.rs  silero_ort.rs
crates/vista-kernel/: Cargo.toml
crates/vista-kernel/examples/: README.md  demo_full_pipeline.rs  demo_zero_lane.rs  e2e_stt.rs  roundtrip_live.rs  test_audio.rs  test_clipboard_snapshot.rs  transcribe_file.rs
crates/vista-kernel/src/: lib.rs  server.rs
crates/vista-kernel/src/llm/: ai_formatting.rs
crates/vista-kernel/src/quality/: lexicon.rs  mod.rs
crates/vista-kernel/tests/: e2e_bootstrap_settings.rs  e2e_full_pipeline.rs  e2e_prompts_and_history.rs  e2e_retry_responses.rs  e2e_settings_commands.rs  e2e_state_machine.rs  e2e_stream_postprocess_mic.rs  e2e_stt_transcription.rs
crates/vista-kernel/tests/assets/data_assets/: 01_no-to-dobra_human_transcription.txt  02_kubernetes-wymaga-konfiguracji_human_transcription.txt  04_runda-3-czyli_human_transcription.txt  VAD_voice_real_pauses.m4a  ZADANIA_TESTOWE.txt
docs/: APP_STORE_READINESS.md  ARCHITECTURE.md  ARCHITECTURE_VISION.md  AUDIO_IMPLEMENTATION.md  AUDIO_MODULE.md  AUDIO_QUICKSTART.md  BACKLOG.md  CLIPBOARD_ENHANCEMENTS.md  CONFIG.md  CONFIG_MODULE.md  CONFIG_SUMMARY.md  CONTROLLER_INTEGRATION_STATUS.md  CURRENT_STATE.md  DEWAR_2026-01-31.md  ENV_REGISTRY.toml  FEASIBILITY_ANALYSIS.md  HOTKEYS_CONTRACT.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  INTEGRATION_EXAMPLE.md  JUNIE_DECODING_PARAMS.md  JUNIE_STT_FIXES.md  JUNIE_STT_PHASE2.md  LICENSE_NOTES.md  (+31 more)
ffi/: Cargo.toml
ffi/src/: lib.rs
tauri-app/: Cargo.toml  Trunk.toml  index.html  tauri.conf.json
tauri-app/assets/: styles.css
tauri-app/icons/: icon.icns
tauri-app/src/: hotkey_integration.rs  ipc_client.rs  lib.rs  main.rs  state.rs
tauri-app/src/commands/: audio.rs  config.rs  formatting.rs  lexicon.rs  mod.rs  recording.rs  stt.rs
tauri-app/src/ui/: app.rs  mod.rs  tauri.rs
tauri-app/src/ui/assistant/: mod.rs
tauri-app/src/ui/lab/: mod.rs
tauri-app/src/ui/settings/: mod.rs
tauri-app/src/ui/teacher/: mod.rs
(+660 files in other folders)
