[workspace]
resolver = "2"
members = ["core", "ffi", "uniffi-bindgen"]

[workspace.package]
version = "0.8.0"
edition = "2024"
authors = ["VetCoders <hello@vetcoders.io>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
