[project]
name = "VistaScribe"
version = "0.1.0"
description = "Local macOS tray app for speech-to-text with MLX Whisper + optional MLX‑LM formatting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altgraph==0.17.4",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "distro==1.9.0",
    "h11==0.14.0",
    "hf-xet>=1.1.10",
    "httpcore==1.0.8",
    "httpx==0.28.1",
    "huggingface-hub>=0.35.3",
    "idna==3.10",
    "jiter==0.9.0",
    "macholib==1.16.3",
    "mlx-audio>=0.2.5",
    "mlx-embeddings>=0.0.4",
    "mlx-lm>=0.28.1",
    "mlx-whisper>=0.4.3",
    "modulegraph==0.19.6",
    "numpy==2.2.4",
    "openai==1.75.0",
    "packaging==24.2",
    "py2app==0.28.8",
    "pycparser==2.22",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pyobjc==11.0",
    "pyobjc-core==11.0",
    "pyobjc-framework-accessibility==11.0",
    "pyobjc-framework-accounts==11.0",
    "pyobjc-framework-addressbook==11.0",
    "pyobjc-framework-adservices==11.0",
    "pyobjc-framework-adsupport==11.0",
    "pyobjc-framework-applescriptkit==11.0",
    "pyobjc-framework-applescriptobjc==11.0",
    "pyobjc-framework-applicationservices==11.0",
    "pyobjc-framework-apptrackingtransparency==11.0",
    "pyobjc-framework-audiovideobridging==11.0",
    "pyobjc-framework-authenticationservices==11.0",
    "pyobjc-framework-automaticassessmentconfiguration==11.0",
    "pyobjc-framework-automator==11.0",
    "pyobjc-framework-avfoundation==11.0",
    "pyobjc-framework-avkit==11.0",
    "pyobjc-framework-avrouting==11.0",
    "pyobjc-framework-backgroundassets==11.0",
    "pyobjc-framework-browserenginekit==11.0",
    "pyobjc-framework-businesschat==11.0",
    "pyobjc-framework-calendarstore==11.0",
    "pyobjc-framework-callkit==11.0",
    "pyobjc-framework-carbon==11.0",
    "pyobjc-framework-cfnetwork==11.0",
    "pyobjc-framework-cinematic==11.0",
    "pyobjc-framework-classkit==11.0",
    "pyobjc-framework-cloudkit==11.0",
    "pyobjc-framework-cocoa==11.0",
    "pyobjc-framework-collaboration==11.0",
    "pyobjc-framework-colorsync==11.0",
    "pyobjc-framework-contacts==11.0",
    "pyobjc-framework-contactsui==11.0",
    "pyobjc-framework-coreaudio==11.0",
    "pyobjc-framework-coreaudiokit==11.0",
    "pyobjc-framework-corebluetooth==11.0",
    "pyobjc-framework-coredata==11.0",
    "pyobjc-framework-corehaptics==11.0",
    "pyobjc-framework-corelocation==11.0",
    "pyobjc-framework-coremedia==11.0",
    "pyobjc-framework-coremediaio==11.0",
    "pyobjc-framework-coremidi==11.0",
    "pyobjc-framework-coreml==11.0",
    "pyobjc-framework-coremotion==11.0",
    "pyobjc-framework-coreservices==11.0",
    "pyobjc-framework-corespotlight==11.0",
    "pyobjc-framework-coretext==11.0",
    "pyobjc-framework-corewlan==11.0",
    "pyobjc-framework-cryptotokenkit==11.0",
    "pyobjc-framework-datadetection==11.0",
    "pyobjc-framework-devicecheck==11.0",
    "pyobjc-framework-devicediscoveryextension==11.0",
    "pyobjc-framework-dictionaryservices==11.0",
    "pyobjc-framework-discrecording==11.0",
    "pyobjc-framework-discrecordingui==11.0",
    "pyobjc-framework-diskarbitration==11.0",
    "pyobjc-framework-dvdplayback==11.0",
    "pyobjc-framework-eventkit==11.0",
    "pyobjc-framework-exceptionhandling==11.0",
    "pyobjc-framework-executionpolicy==11.0",
    "pyobjc-framework-extensionkit==11.0",
    "pyobjc-framework-externalaccessory==11.0",
    "pyobjc-framework-fileprovider==11.0",
    "pyobjc-framework-fileproviderui==11.0",
    "pyobjc-framework-findersync==11.0",
    "pyobjc-framework-fsevents==11.0",
    "pyobjc-framework-gamecenter==11.0",
    "pyobjc-framework-gamecontroller==11.0",
    "pyobjc-framework-gamekit==11.0",
    "pyobjc-framework-gameplaykit==11.0",
    "pyobjc-framework-healthkit==11.0",
    "pyobjc-framework-imagecapturecore==11.0",
    "pyobjc-framework-inputmethodkit==11.0",
    "pyobjc-framework-installerplugins==11.0",
    "pyobjc-framework-instantmessage==11.0",
    "pyobjc-framework-intents==11.0",
    "pyobjc-framework-intentsui==11.0",
    "pyobjc-framework-iobluetooth==11.0",
    "pyobjc-framework-iobluetoothui==11.0",
    "pyobjc-framework-iosurface==11.0",
    "pyobjc-framework-ituneslibrary==11.0",
    "pyobjc-framework-kernelmanagement==11.0",
    "pyobjc-framework-latentsemanticmapping==11.0",
    "pyobjc-framework-launchservices==11.0",
    "pyobjc-framework-libdispatch==11.0",
    "pyobjc-framework-libxpc==11.0",
    "pyobjc-framework-linkpresentation==11.0",
    "pyobjc-framework-localauthentication==11.0",
    "pyobjc-framework-localauthenticationembeddedui==11.0",
    "pyobjc-framework-mailkit==11.0",
    "pyobjc-framework-mapkit==11.0",
    "pyobjc-framework-mediaaccessibility==11.0",
    "pyobjc-framework-mediaextension==11.0",
    "pyobjc-framework-medialibrary==11.0",
    "pyobjc-framework-mediaplayer==11.0",
    "pyobjc-framework-mediatoolbox==11.0",
    "pyobjc-framework-metal==11.0",
    "pyobjc-framework-metalfx==11.0",
    "pyobjc-framework-metalkit==11.0",
    "pyobjc-framework-metalperformanceshaders==11.0",
    "pyobjc-framework-metalperformanceshadersgraph==11.0",
    "pyobjc-framework-metrickit==11.0",
    "pyobjc-framework-mlcompute==11.0",
    "pyobjc-framework-modelio==11.0",
    "pyobjc-framework-multipeerconnectivity==11.0",
    "pyobjc-framework-naturallanguage==11.0",
    "pyobjc-framework-netfs==11.0",
    "pyobjc-framework-network==11.0",
    "pyobjc-framework-networkextension==11.0",
    "pyobjc-framework-notificationcenter==11.0",
    "pyobjc-framework-opendirectory==11.0",
    "pyobjc-framework-osakit==11.0",
    "pyobjc-framework-oslog==11.0",
    "pyobjc-framework-passkit==11.0",
    "pyobjc-framework-pencilkit==11.0",
    "pyobjc-framework-phase==11.0",
    "pyobjc-framework-photos==11.0",
    "pyobjc-framework-photosui==11.0",
    "pyobjc-framework-preferencepanes==11.0",
    "pyobjc-framework-pushkit==11.0",
    "pyobjc-framework-quartz==11.0",
    "pyobjc-framework-quicklookthumbnailing==11.0",
    "pyobjc-framework-replaykit==11.0",
    "pyobjc-framework-safariservices==11.0",
    "pyobjc-framework-safetykit==11.0",
    "pyobjc-framework-scenekit==11.0",
    "pyobjc-framework-screencapturekit==11.0",
    "pyobjc-framework-screensaver==11.0",
    "pyobjc-framework-screentime==11.0",
    "pyobjc-framework-scriptingbridge==11.0",
    "pyobjc-framework-searchkit==11.0",
    "pyobjc-framework-security==11.0",
    "pyobjc-framework-securityfoundation==11.0",
    "pyobjc-framework-securityinterface==11.0",
    "pyobjc-framework-sensitivecontentanalysis==11.0",
    "pyobjc-framework-servicemanagement==11.0",
    "pyobjc-framework-sharedwithyou==11.0",
    "pyobjc-framework-sharedwithyoucore==11.0",
    "pyobjc-framework-shazamkit==11.0",
    "pyobjc-framework-social==11.0",
    "pyobjc-framework-soundanalysis==11.0",
    "pyobjc-framework-speech==11.0",
    "pyobjc-framework-spritekit==11.0",
    "pyobjc-framework-storekit==11.0",
    "pyobjc-framework-symbols==11.0",
    "pyobjc-framework-syncservices==11.0",
    "pyobjc-framework-systemconfiguration==11.0",
    "pyobjc-framework-systemextensions==11.0",
    "pyobjc-framework-threadnetwork==11.0",
    "pyobjc-framework-uniformtypeidentifiers==11.0",
    "pyobjc-framework-usernotifications==11.0",
    "pyobjc-framework-usernotificationsui==11.0",
    "pyobjc-framework-videosubscriberaccount==11.0",
    "pyobjc-framework-videotoolbox==11.0",
    "pyobjc-framework-virtualization==11.0",
    "pyobjc-framework-vision==11.0",
    "pyobjc-framework-webkit==11.0",
    "python-dotenv==1.1.0",
    "quickmachotkey==2023.11.17",
    "rumps==0.4.0",
    "sniffio==1.3.1",
    "sounddevice==0.5.1",
    "tqdm==4.67.1",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "fastapi==0.115.6",
    "uvicorn==0.30.6",
    "python-multipart==0.0.9",
    "pytest==8.3.3",
]

[dependency-groups]
dev = [
    "ruff>=0.6.9",
]


[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".venv",
    "packaging/dist",
    "packaging/build",
    "models",
    "outputs",
    "logs",
    "format_benchmark.py",
    "full_stack_test.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = [
    # Allow print debug statements in hotkeys for now
    "T201",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"scripts/get_models.py" = ["E501"]
"record_and_transcribe.py" = ["E501"]
"packaging/setup.py" = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["audio", "llm", "stt", "ui", "hotkeys", "path_utils"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "auto"
docstring-code-format = true
