[package]
name = "codescribe-ffi"
version = "0.12.2"
edition = "2024"
authors = ["Vetcoders <hello@vetcoders.io>"]
description = "UniFFI bridge exposing the codescribe engine (agent streaming, STT, config) to Swift"

[lib]
name = "codescribe_ffi"
crate-type = ["staticlib", "cdylib"]
path = "src/lib.rs"

# Binary used to generate the Swift bindings from the built dylib.
[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
codescribe_core = { package = "codescribe-core", path = "../core" }
codescribe = { path = ".." }
uniffi = { version = "0.30", features = ["cli", "tokio"] }
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
anyhow = "1"
chrono = "0.4"
serde_json = { workspace = true }
crossbeam-channel = "0.5"

[dev-dependencies]
async-trait = "0.1"
serial_test = "3"
