[package]
name = "codescribe-core"
version.workspace = true
edition.workspace = true
authors = ["VetCoders <hello@vetcoders.io>"]
license = "Apache-2.0"
description = "Core library for CodeScribe (audio, STT, quality pipeline)"

[lib]
path = "lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging & errors
tracing = "0.1"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "blocking", "stream"] }

# Local STT (Whisper + Candle)
candle-core = { version = "0.9", features = ["metal"] }
candle-transformers = { version = "0.9", features = ["metal"] }
candle-nn = "0.9"
tokenizers = "0.22"
indicatif = "0.18"
zip = "0.6"
# ndarray 0.17 required to match fastembed/ort dependency
ndarray = "0.17"
# Disable default features to avoid zip dep (we only need .npy, not .npz archives)
ndarray-npy = { version = "0.10", default-features = false }

# WebSocket client for voice chat
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"
base64 = "0.22"

# Audio
cpal = "0.17"
hound = "3.5"
symphonia = { version = "0.5", features = ["all", "mp3", "pcm", "isomp4", "alac"] }

# Text/embeddings
regex = "1"
fastembed = { version = "5.8.1", default-features = false, features = ["hf-hub-native-tls", "ort-download-binaries"] }

# Config/paths
directories = "6"
shellexpand = "3"
dotenvy = "0.15"

# Voice Activity Detection - custom Silero wrapper (shares ort with fastembed)
# Model: silero_vad.onnx from https://github.com/snakers4/silero-vad
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["load-dynamic"] }

# Moshi - conversational voice AI (Kyutai Labs)
moshi = { path = "../../moshi/rust/moshi-core", features = ["metal"] }

# Time/utilities
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
flate2 = "1.0"
lazy_static = "1.4"
deunicode = "1.6"
cap-std = "3"

# OpenAI Harmony format for /v1/responses API
openai-harmony = "0.0.8"

[dev-dependencies]
tempfile = "3"
mockito = "1"
serial_test = "3"

[build-dependencies]
dirs = "6"

[lints.rust]
# Allow unexpected_cfgs from objc crate's msg_send! macro (uses cargo-clippy cfg internally)
# embed_model is set by build.rs when Whisper model is available
# embed_tts is set by build.rs when TTS model is available (CODESCRIBE_EMBED_TTS=1)
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(embed_model)', 'cfg(embed_tts)'] }
