[package]
name = "codescribe-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "UniFFI bindings for CodeScribe"

[lib]
crate-type = ["staticlib", "cdylib"]
path = "src/lib.rs"

[dependencies]
codescribe-core = { path = "../core" }
uniffi = "0.30"
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
uniffi = { version = "0.30", features = ["build"] }
