[package]
name = "codescribe-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "codescribe-gui"
path = "src/main.rs"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Shared types (must compile on both)
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Frontend specific (WASM)
leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = ["MouseEvent", "KeyboardEvent", "Window"] }
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Backend specific (Native macOS)
codescribe_core = { path = "../codescribe_core" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
cpal = "0.16"
tokio = { version = "1", features = ["sync"] }
crossbeam-channel = "0.5"
tracing = "0.1"
anyhow = { workspace = true }
