[package]
name = "vista-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = []
manual-examples = []

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["multipart"] }
base64.workspace = true
chrono.workspace = true
futures-util.workspace = true
qube-audio = { path = "../qube-audio" }
qube-stt = { path = "../qube-stt" }
qube-support = { path = "../qube-support" }
qube-ws = { path = "../qube-ws", features = ["offline_eval"] }
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true

[dev-dependencies]
hound.workspace = true
mockito = "1"
serial_test.workspace = true
tower = { version = "0.5", features = ["util"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid.workspace = true

[[example]]
name = "config_demo"
required-features = ["manual-examples"]

[[example]]
name = "demo_full_pipeline"
required-features = ["manual-examples"]

[[example]]
name = "e2e_stt"
required-features = ["manual-examples"]

[[example]]
name = "hold_badge_demo"
required-features = ["manual-examples"]

[[example]]
name = "roundtrip_live"
required-features = ["manual-examples"]

[[example]]
name = "test_audio"
required-features = ["manual-examples"]

[[example]]
name = "test_audio_long"
required-features = ["manual-examples"]

[[example]]
name = "test_clipboard_snapshot"
required-features = ["manual-examples"]

[[example]]
name = "transcribe_file"
required-features = ["manual-examples"]

[[example]]
name = "demo_zero_lane"
required-features = ["manual-examples"]
